k8s/ehpc-io-https-redirect-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect-middleware
  namespace: ehpc-io
spec:
  redirectScheme:
    scheme: https
    permanent: true
