k8s/ehpc-io-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: middleware
  namespace: ehpc-io
spec:
  headers:
    contentTypeNosniff: true
    referrerPolicy: "strict-origin-when-cross-origin"
    stsSeconds: 31536000
    stsIncludeSubdomains: true
    stsPreload: true
    forceSTSHeader: true
    customResponseHeaders:
      Server: ""
