k8s/dummy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dummy
spec:
  clusterIP: None
  ports:
    - port: 80
      targetPort: 80
