k8s/ehpc-io-dummy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dummy
  namespace: ehpc-io
spec:
  clusterIP: None
  ports:
    - port: 80
      targetPort: 80
