k8s/ehpc-io-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ehpc-io
  namespace: ehpc-io
spec:
  selector:
    app: ehpc-io
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
