k8s/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      port: 443
      protocol: HTTPS
      hostname: "ehpc.io"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: eg-https
      allowedRoutes:
        namespaces:
          from: All
    - name: https-www
      port: 443
      protocol: HTTPS
      hostname: "www.ehpc.io"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: eg-https-www
      allowedRoutes:
        namespaces:
          from: All
    - name: grafana
      port: 8543
      protocol: HTTPS
      hostname: "grafana.ehpc.io"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: eg-https-grafana
      allowedRoutes:
        namespaces:
          from: All
