k8s/ehpc-io-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ehpc-io
  namespace: ehpc-io
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts: ["ehpc.io"]
      secretName: ehpc-io-tls
  rules:
    - host: ehpc.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ehpc-io
                port:
                  number: 80
